@@ -347,4 +347,11 @@ public class NestedLoopConsumerTest extends CrateUnitTest {
         assertThat(nl.projections().get(0), instanceOf(TopNProjection.class));
         assertThat(((TopNProjection)nl.projections().get(0)).limit(), is(TopN.NO_LIMIT));
     }
+
+    @Test
+    public void testGlobalAggregateWithExplicitCrossJoinSyntax() throws Exception {
+        // using explicit cross join syntax caused a NPE due to joinPair being present but the condition being null.
+        Plan plan = plan("select count(t1.col1) from unnest([1, 2]) as t1 cross join unnest([1, 2]) as t2");
+        assertThat(plan, instanceOf(NestedLoop.class));
+    }
 }
