@@ -5,6 +5,9 @@ Changes for Crate
 Unreleased
 ==========
 
+ - Fixed a bug which caused non-grouping aggregations on a join with explicit
+   `CROSS JOIN` syntax to fail.
+
  - Correctly expose ``stats.service.interval`` in the ``sys.cluster``
    table.
 
